# tinasha

./: .gitignore  .gitmodules  README.md  platformio.ini
app/: .gitignore  plantuml.uml  pubspec.yaml
firmware/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.esp32-s3-devkitc-1-n16r8v  sdkconfig.esp32-s3-devkitc-1-n16r8v.old  sdkconfig.esp32-s3-devkitc-1-n16r8vs  (+1 more)
firmware/components/app/: CMakeLists.txt
firmware/components/app/app_i2s/: i2s_common.c
firmware/components/app/app_i2s/include/app/: i2s.h  i2s_common.h
firmware/components/app/app_microphone/: microphone.c
firmware/components/app/app_microphone/include/app/: microphone.h
firmware/components/app/app_presence/: presence.c
firmware/components/app/app_presence/include/app/: presence.h
firmware/components/app/app_speaker/: speaker.c
firmware/components/app/app_speaker/include/app/: speaker.h
firmware/components/app/app_tinasha_os/: app_header.c  tcp_server.c  udp_server.c
firmware/components/app/app_tinasha_os/include/app/: tcp_server.h
firmware/components/app/app_tinasha_os/include/os/: tcp_server.h  udp_server.h
firmware/components/app/app_tinasha_os/include/os/command/: app_header.h
firmware/components/app/app_voice_to_server/: udp.c  voice_to_server.c  ws.c
firmware/components/app/app_voice_to_server/include/app/: voice_to_server.h
firmware/components/app/app_voice_to_server/include/app/vts_protocol/: udp.h  ws.h
firmware/components/app/app_wifi_helper/: wifi_helper.c
firmware/components/app/app_wifi_helper/include/app/: wifi_helper.h
(+58 files in other folders)
